Fixed small title error on small devices

--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -24,6 +24,10 @@ h1, .h1 {
 	text-shadow: 0 1px white, 0 2px $lightgrey;
 	margin: 1em 0 0 0;
 	text-transform: uppercase;
+
+	@include breakpoint(small) {
+		@include rem(3.2);
+	}
 }
 
 h2, .h2 {
